--- a/app/src/main/res/layout/view_main_restaurant_card.xml
+++ b/app/src/main/res/layout/view_main_restaurant_card.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="@dimen/_4sdp"
-    android:layout_marginLeft="@dimen/_16sdp"
-    android:layout_marginRight="@dimen/_16sdp"
+    android:layout_marginLeft="@dimen/_8sdp"
+    android:layout_marginRight="@dimen/_8sdp"
     android:layout_marginTop="@dimen/_4sdp"
     map:contentPadding="@dimen/_4sdp"
     map:cardCornerRadius="@dimen/_2sdp"
@@ -74,6 +74,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/addToMaybeList"
             android:src="@drawable/ic_bookmark_border_black_24dp"
+            android:padding="@dimen/_4sdp"
             android:layout_alignBottom="@id/imageHolder"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
