Added MaterialShowcaseView for first time tutorial (https://github.com/deano2390/MaterialShowcaseView); Refactor and add extra comments; Prevent duplicates in restaurant saved list; Increase button, text size for better readability;

--- a/app/src/main/res/layout/activity_saved_list.xml
+++ b/app/src/main/res/layout/activity_saved_list.xml
@@ -6,12 +6,11 @@
     android:layout_height="match_parent">
 
     <fragment
-        android:id="@+id/maybeListFragment"
+        android:id="@+id/savedListFragment"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:name="com.chris.randomrestaurantgenerator.fragments.MaybeListFragment"
-        tools:layout="@layout/fragment_maybe_list"
-        xmlns:android="http://schemas.android.com/apk/res/android">
+        android:name="com.chris.randomrestaurantgenerator.fragments.SavedListFragment"
+        tools:layout="@layout/fragment_saved_list">
     </fragment>
 
 </LinearLayout>
