--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -16,8 +16,8 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:gravity="center_vertical|start"
-        android:minHeight="@dimen/_36sdp"
-        android:textSize="@dimen/_12sdp"
+        android:minHeight="@dimen/_46sdp"
+        android:textSize="@dimen/_13sdp"
         android:singleLine="true"
         android:paddingTop="@dimen/_2sdp"
         android:paddingBottom="@dimen/_2sdp"
@@ -26,20 +26,20 @@
         android:background="@android:color/white"
         android:imeOptions="actionDone"
         android:ems="10"
-        android:hint="Enter zipcode, address, city, or use Location"
+        android:hint="Enter zip, address, city, or use Location"
         android:drawableRight="@drawable/crosshairs_gps" />
 
 
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/generate"
         android:layout_width="match_parent"
-        android:layout_height="36dp"
+        android:layout_height="46dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_gravity="bottom|center_horizontal"
         android:layout_marginTop="@dimen/_4sdp"
         android:text="GENERATE"
-        android:textSize="@dimen/_12sdp"
+        android:textSize="@dimen/_16sdp"
         android:textColor="#FFFFFF"
         android:background="#F44336"
         android:padding="0dp"
