--- a/app/src/main/res/layout/view_main_restaurant_card.xml
+++ b/app/src/main/res/layout/view_main_restaurant_card.xml
@@ -72,7 +72,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/addToMaybeList"
+            android:id="@+id/addToSavedList"
             android:src="@drawable/ic_bookmark_border_black_24dp"
             android:padding="@dimen/_4sdp"
             android:layout_alignBottom="@id/imageHolder"
