--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,9 +8,9 @@
         android:title="@string/action_settings"
         app:showAsAction="never" />
     <item
-        android:id="@+id/action_maybe_list"
+        android:id="@+id/action_saved_list"
         android:icon="@drawable/ic_view_list_white_48dp"
         android:orderInCategory="100"
-        android:title="Maybe List"
+        android:title="Saved List"
         app:showAsAction="ifRoom" />
 </menu>
