--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -21,9 +21,9 @@
         android:singleLine="true"
         android:paddingTop="@dimen/_2sdp"
         android:paddingBottom="@dimen/_2sdp"
-        android:paddingLeft="?listPreferredItemPaddingLeft"
-        android:paddingRight="?listPreferredItemPaddingRight"
-        android:background="@android:color/white"
+        android:layout_marginLeft="@dimen/_6sdp"
+        android:layout_marginRight="@dimen/_6sdp"
+        android:background="?editTextBackground"
         android:imeOptions="actionDone"
         android:ems="10"
         android:hint="Enter zip, address, city, or use Location"
@@ -41,7 +41,7 @@
         android:text="GENERATE"
         android:textSize="@dimen/_16sdp"
         android:textColor="#FFFFFF"
-        android:background="#F44336"
+        android:background="#F6511D"
         android:padding="0dp"
         android:paddingRight="@dimen/_40sdp"
         android:paddingLeft="@dimen/_40sdp"
