--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#F6511D</color>
+    <color name="colorPrimaryDark">#C93405</color>
+    <color name="colorAccent">#00A6ED</color>
     <color name="black">#000000</color>
-    <color name="my_background_material_light">#e9e9e9</color>
 </resources>
