--- a/app/src/main/res/layout/view_main_restaurant_card.xml
+++ b/app/src/main/res/layout/view_main_restaurant_card.xml
@@ -69,6 +69,16 @@
             android:textColor="#66BB6A"
             android:textSize="@dimen/_12sdp" />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/_4sdp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:id="@+id/distance"
+            android:layout_below="@+id/deals"
+            android:layout_toRightOf="@+id/imageHolder"
+            android:layout_toEndOf="@+id/imageHolder" />
+
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -80,6 +90,7 @@
             android:layout_alignParentEnd="true"
             android:background="?android:attr/selectableItemBackground"
             android:clickable="true"/>
+
     </RelativeLayout>
 
 </com.chris.randomrestaurantgenerator.views.RestaurantCard>
