--- a/app/src/main/res/layout/fragment_saved_list.xml
+++ b/app/src/main/res/layout/fragment_saved_list.xml
@@ -8,7 +8,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/listRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/_4sdp">
 
     </android.support.v7.widget.RecyclerView>
 
