--- a/app/src/main/res/layout/view_main_restaurant_card.xml
+++ b/app/src/main/res/layout/view_main_restaurant_card.xml
@@ -40,7 +40,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:gravity="top"
-            android:textSize="@dimen/_18sdp"
+            android:textSize="@dimen/_16sdp"
             android:paddingLeft="@dimen/_4sdp"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:layout_toRightOf="@+id/imageHolder"
@@ -70,20 +70,20 @@
             android:textSize="@dimen/_12sdp" />
 
         <TextView
+            android:id="@+id/distanceAndReviewCount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="@dimen/_4sdp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:id="@+id/distance"
             android:layout_below="@+id/deals"
             android:layout_toRightOf="@+id/imageHolder"
             android:layout_toEndOf="@+id/imageHolder" />
 
-        <ImageView
+        <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/addToSavedList"
-            android:src="@drawable/ic_bookmark_border_black_24dp"
+            android:id="@+id/saveToList"
+            android:src="@drawable/bookmark_outline_plus"
             android:padding="@dimen/_4sdp"
             android:layout_alignBottom="@id/imageHolder"
             android:layout_alignParentRight="true"
