Add About info page

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,8 +4,15 @@
     tools:context=".MainActivity">
     <item
         android:id="@+id/action_saved_list"
-        android:icon="@drawable/ic_view_list_white_48dp"
-        android:orderInCategory="100"
+        android:icon="@drawable/view_list"
+        android:orderInCategory="1"
         android:title="Saved List"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/action_about"
+        android:icon="@drawable/information_outline"
+        android:orderInCategory="2"
+        android:title="About"
         app:showAsAction="ifRoom" />
 </menu>
