--- a/app/src/main/res/layout/view_main_restaurant_card.xml
+++ b/app/src/main/res/layout/view_main_restaurant_card.xml
@@ -82,7 +82,7 @@
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/saveToList"
+            android:id="@+id/saveButton"
             android:src="@drawable/bookmark_outline_plus"
             android:padding="@dimen/_4sdp"
             android:layout_alignBottom="@id/imageHolder"
