--- a/app/src/main/res/layout/fragment_saved_list.xml
+++ b/app/src/main/res/layout/fragment_saved_list.xml
@@ -31,7 +31,7 @@
             app:cpb_max_sweep_angle="300"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:id="@+id/circularProgressBar"
+            android:id="@+id/circularProgressBarSavedList"
             android:visibility="gone"/>
 
         <TextView
